--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vueify-babel-7-support",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Vue component transform for Browserify supporting babel@7",
   "main": "index.js",
   "repository": {
@@ -9,6 +9,10 @@
   },
   "keywords": [
     "vue",
+    "vueify",
+    "babel",
+    "babel 7",
+    "babel@7",
     "browserify"
   ],
   "author": "Evan You",
